# nlp_ufam_2025_tp4

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  report.md  review_final_blog_post.md
knowledge/: web.py
src/nlp_01_2025/: crew.py  main.py
src/nlp_01_2025/config/: agents.py  tasks.py
src/nlp_ufam/: crew.py  knowledges.py  tools.py
src/nlp_ufam/config/: agents.py  tasks.py
