[project]
name = "nlp_01_2025"
version = "0.1.0"
description = "nlp_01_2025 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "docling>=2.42.0",
]

[project.scripts]
nlp_01_2025 = "nlp_01_2025.main:run"
run_crew = "nlp_01_2025.main:run"
train = "nlp_01_2025.main:train"
replay = "nlp_01_2025.main:replay"
test = "nlp_01_2025.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
