[project]
name = "nlp_ufam"
version = "0.1.0"
description = "nlp_ufam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "docling>=2.42.0",
]

[project.scripts]
nlp_ufam = "nlp_ufam.main:run"
run_crew = "nlp_ufam.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
